--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,14 @@
     <name>seraph-grammar</name>
     <url>http://www.openseraph.org</url>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/openseraph/seraph-grammar</url>
+        </repository>
+    </distributionManagement>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
